bpo-45392: Update the docstring of the 'type' built-in (GH-29439)